<resources>
    <string name="app_name">WALLisWALL</string>
    <string name="image_1">Image 1</string>
    <string name="apply_wallpaper">Apply Wallpaper</string>
    <string name="wall">Wall</string>
    <string name="walls">Walls</string>
    <string name="favourites">Favourites</string>
    <string name="settings">Settings</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="theme">Theme:</string>
    <string name="clear_my_favourites">Clear my favourites:</string>
    <string name="shuffled_walls">Shuffled Walls</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="delete">Delete</string>
</resources>
